<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">One2Many_VdoTokCall</string>

    <string name="userNameHint">Username</string>
    <string name="userEmailHint">Email Address</string>
    <string name="usernameEmailHint">Username / Email</string>
    <string name="passwordHint">Password</string>
    <string name="Login">Sign In </string>
    <string name="Signup">Sign Up </string>
    <string name="register">Register </string>
    <string name="start">Start </string>
    <string name="user_initial">KM</string>
    <string name="typeMessage">Type your message</string>
    <string name="status">Status</string>
    <string name="initial_broadcast">Initiating Public Broadcast</string>
    <string name="vdotok">VdoTok</string>
    <string name="confirm">Confirm</string>
    <string name="continue_text">Continue</string>
    <string name="invalid_email">Invalid Email Address</string>
    <string name="invalid_username">Invalid Username Credential</string>
    <string name="invalid_password">Invalid Password Credential</string>
    <string name="create_group">Create group</string>
    <string name="group_updated">Group Updated</string>
    <string name="group_created">Group created success</string>
    <string name="add_group_title">Create a group chat</string>
    <string name="name_group_chat">Name your group chat...</string>
    <string name="hint_search_bar">Search</string>
    <string name="createGroupText">Create Group</string>
    <string name="hint_chat_text_field">Type a Message</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_text">Login with username and password.</string>
    <string name="register_text">Register with username and password.</string>
    <string name="create_user">Create a user</string>
    <string name="register_user">Register user</string>
    <string name="account_created_success">Account Created!</string>
    <string name="select_contact">Select Contact</string>
    <string name="user_count">%1$d contacts</string>s
    <string name="group_name_empty">Group name cannot be empty!</string>
    <string name="blank" />
    <string name="in_progress">In progress!</string>
    <string name="sign_up_to_your_account">Sign Up</string>
    <string name="no_groups_yet">No Groups Yet</string>
    <string name="no_conversation_detail">Tap and hold on any message\nto star it, so you can easily find\nit later.</string>
    <string name="btn_log_out">Log Out as %s</string>
    <string name="btn_new_group">New Group</string>
    <string name="btn_refresh">Refresh</string>
    <string name="group_list_title">Group List</string>
    <string name="group_name_hint">ex: Deeper Team</string>
    <string name="done">Done</string>
    <string name="participant_limit_error">Max limit for participants is 4!</string>
    <string name="feature_in_progress">Feature in progress!</string>
    <string name="description_call">call</string>
    <string name="edit_group">Edit Group Name</string>
    <string name="delete">Delete</string>
    <string name="delete_group">Are you sure you want to delete the group chat?</string>
    <string name="group_deleted">Group Delete</string>
    <string name="no_network_available">No network available!</string>
    <string name="cancel">Cancel</string>
    <string name="no_contacts">No contacts found!</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="api_url_empty">Kindly scan the qr code / Enter Credentials of Project</string>

    <!--    image descriptions-->
    <string name="description_attachment">image for attachment menu</string>
    <string name="description_open_camera">image to open camera</string>
    <string name="description_emoji_keyboard">image to enable emoji keyboard</string>
    <string name="description_back_button">image back button</string>
    <string name="description_msg_sent_success">image message sent</string>
    <string name="no_conversation_icon_center">no conversation icon center</string>
    <string name="image_back_button">image back button</string>
    <string name="image_plus_icon">image plus icon</string>
    <string name="image_close_icon">image close icon</string>
    <string name="description_image_user">image user</string>
    <string name="description_user_selected">image user</string>
    <string name="description_image_more_chat_group_options">image_more_chat_group_options</string>
    <string name="txt_audio_call">Audio Call</string>
    <string name="txt_video_call">Video Call</string>
    <string name="no_user_select">No User Selected</string>
    <string name="no_user_found">No User Found</string>

    <string name="incoming_calling">You are on call with</string>
    <string name="screen_calling">You are on screen sharing call with</string>
    <string name="video_calling">You are on video call with</string>
    <string name="screen_video_calling">You are on video / screen sharing call with</string>
    <string name="audio_calling">You are audio call with</string>
    <string name="incoming_call">Incoming Screen Sharing Call from</string>
    <string name="outgoing_call">Calling</string>
    <string name="calling">Calling</string>
    <string name="title_activity_dash_board">DashBoardActivity</string>
    <string name="incoming_video_call">Incoming Video Call from</string>
    <string name="group_audio_calling">You are calling with</string>
    <string name="group_video_calling">You are video calling with</string>
    <string name="internal_audio">"Do you want to enable internal audio ?"</string>
    <string name="no_user_data_found">"No user data found please re-login"</string>
    <string name="socket_connected">"Socket Connected!"</string>
    <string name="socket_connection_failed">"Socket Connection failed! No Internet!"</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="broadcast">broadcast</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="avail_feature">Available Features</string>
    <string name="sharing_with_app_audio">Screen sharing with app audio</string>
    <string name="sharing_with_mic_audio">Screen sharing with mic audio</string>
    <string name="camera">camera</string>
    <string name="ok">OK</string>
    <string name="alert">Alert</string>
    <string name="alert_msg">"App Audio is not supported on devices with version less than 10 "</string>
    <string name="public_broadcast">Public Broadcast</string>
    <string name="group_broadcast">Group Broadcast</string>
    <string name="start_broadcast">Start BrOADCAST</string>
    <string name="copy_url">Copy</string>
    <string name="your_url">Copy URL</string>
    <string name="copy_url_text">Text is copied to clipboard</string>
    <string name="broad_casting_screen_sharing">Broad Casting Screen Sharing</string>
</resources>